# C-programming-for-IoT-devices

./: CMakeLists.txt  Exercise_1.c  Exercise_1.h  README.md  main.c
Exercise_1/: Exercise_1.c  Exercise_1.h
Exercise_2/: Exercise_2.c  Exercise_2.h
Exercise_3/: Exercise_3.c  Exercise_3.h
